--- a/DEV/DocumentQuery/DocumentDBServices/Views/Home/Index.cshtml
+++ b/DEV/DocumentQuery/DocumentDBServices/Views/Home/Index.cshtml
@@ -1,15 +1,20 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>DocumentDB Services</h1>
+    <p class="lead">DocumentDB Services is a free service to query Azure DocumentDB.</p>
+    <p><a href="http://stuartmcleantech.blogspot.co.uk/2016/03/scalable-querying-multiple-azure.html" class="btn btn-primary btn-lg" target="_blank">Learn more &raquo;</a></p>
+    <p>Azure DocumentDB is highly scalable - it seems that every 10GB or so you need a new "Collection".  My guess is each Collection gets you a new VM so you get scale!</p>
+    <p>So - if you want to run a query you need to do a request to all your collections (http) and then put all the answers together.</p>
+    <p>So - this service will do it for you</p>
+    http://documentdbservices.azurewebsites.net/api/Document/?endpointUrl={YOUR ENDPOINT}&authorizationKey={YOUR KEY}&query={YOUR QUERY}
+    <p>You must url encode the parameters.  I used <a href="http://www.url-encode-decode.com/" target="_blank">this service</a>.</p>
+    <p>Actually - I only had to encode the authorizationKey - it contains a fair amount of special characters - everything else the browser was able to take care of.</p>
+    <p>You can get the code on <a href="https://documentdbservices.codeplex.com/" target="_blank" >Codeplex</a>.
 </div>
 <div class="row">
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+
+
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
@@ -20,5 +25,5 @@
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
+    </div>*@
 </div>
